hphp/hack/test/typecheck/this/lambda_param.php.exp
File "lambda_param.php", line 5, characters 11-15:
Cannot re-assign `$this` (Parsing[1002])
File "lambda_param.php", line 6, characters 15-19:
Cannot re-assign `$this` (Parsing[1002])
